manifests/cluster-addons/semaphore/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: semaphore
  namespace: semaphore
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: tailscale-int
      namespace: tailscale

  hostnames:
    - semaphore.int.bakseter.net

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ''
          kind: Service
          name: semaphore
          port: 3000
